# Quant-Finance-MLDL-Analytics

./: .gitignore  CLAUDE.md  WIKI.md  datasets.config.json  pyproject.toml  tdo.md
.github/workflows/: daily-pipeline.yml  diagrams.yml  pipeline.yml
.tmp_dagster_home_33q984tx/history/: runs.db
.tmp_dagster_home_33q984tx/history/runs/: .db  bc07040e-4ca9-45c5-bf1b-2d29724385aa.db  index.db
.tmp_dagster_home_33q984tx/schedules/: schedules.db
Backend/: package-lock.json  package.json  server.js
Backend/src/api-management/: InvestmentController.js  routes.js
Backend/src/config/: datasets.js
Backend/src/investment-calculations/: MarketInvestment.js
Frontend/: index.html  package-lock.json  package.json  vercel.json
Frontend/CSS/: home.css
Frontend/JS/: Chart.js  Investment.js  app.js
Frontend/api/_lib/config/: datasets.js
Frontend/api/investment/: projection.js
data_pipeline/: assets.py  definitions.py  project.py
data_pipeline/assets/: dbt_assets.py
data_pipeline/assets/us-exchange/: extract.py  transform.py
data_pipeline/assets/us_exchange/: extract.py  load.py
data_pipeline/dbt_project/: .user.yml  dbt_project.yml  profiles.yml
data_pipeline/resources/: r2.py
docs/: WIKI.md  sprint-1-data-engineering-outcomes.md  sprint-2-backend-outcomes.md
docs/diagrams/api/: api.mmd
docs/diagrams/classes/: class-diagram.mmd
docs/diagrams/database/: database.mmd
docs/diagrams/infrastructure/: infrastructure.mmd
docs/diagrams/system/: system.mmd
docs/diagrams/workflows/: workflows.mmd
scripts/: generate-diagrams.sh
(+6 files in other folders)
